# HAK-GAL-Suite

./: .env.example  AKTUELLER_STAND_UND_AUFGABEN.md  DOCKER_INSTALLATION_GUIDE.md  GITHUB_SYNC_PLAN.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  REPOSITORY_MODERNIZATION_PLAN.md  SENTRY_INTEGRATION_GUIDE.md  STRESS_TESTING_README.md  SYSTEM_ARCHITECTURE_STATUS.md  advanced_analytics.py  analytics_dashboard_generator.py  api.py  api_minimal.py  frontend_polling_optimization.ts  hak_gal_stress_tester.py  k_assistant.kb  optimized_index_component.tsx  pyproject.toml  pytest.ini  requirements.txt  sentry_commit_commands.md  start_simple.bat  test.py  test_backend_fixes.ps1  test_sentry_integration.py
backend/: __init__.py  create_compatibility_wrapper.py  logging_config.py  main.py  migrate_to_modular.py
docs/: BACKEND_VALIDATION_DOCS.md  Bewertung_HAK-GAL_Entwicklungen.md  FINALE_ANLEITUNG.md  FRONTEND_MODERNIZATION_COMPLETE.md  HAK-GAL_Status_Report.md  HAK-GAL_Synthesis_Report.tex  HAK-GAL_Synthesis_Report2.tex  HAK-GAL_Whitepaper_Definitive_Edition_v2.tex  IMPLEMENTATION_STATUS.md  LEARN_OPTIMIZATION.md  PROBLEMBEHANDLUNG_ABGESCHLOSSEN.md  TOOLS_OVERVIEW.md  backend_5_fix_commit.md  backend_6_fix_commit.md  backend_7_fix_commit.md  backend_7_fix_commit_CORRECTED.md  backend_A_fix_commit_PROFESSIONAL.md  backend_BCD_timeout_analysis.md  benchmark_report_20250713_101420.md  benchmark_report_20250713_103546.md  benchmark_report_20250713_104738.md  benchmark_report_20250713_105340.md  benchmark_report_20250713_105730.md  benchmark_report_20250713_110145.md  endgame.tex  (+6 more)
(+72 files in other folders)
